# DarkForest

./: .dockerignore  .env.development  .env.example  .gitattributes  .gitignore  AGENTS.md  API-README.md  AUTHORITATIVE-SERVER-IMPLEMENTATION.md  BROADCAST-FLOW-IMPLEMENTATION.md  CONTRIBUTING.md  Caddyfile  Caddyfile.new  DEPLOY-GUIDE.md  DEPLOYMENT.md  DOCKER-README.md  DOCKERFILE.railway  Dockerfile  Dockerfile.new  MATCHMAKING-INTEGRATION.md  MIGRATION-GUIDE.md  ONLINE-MODE.md  QWEN.md  README.md  TESTING.md  TURN-FLOW-IMPLEMENTATION.md  WEBSOCKET-CLIENT-GUIDE.md  boardgame_cmodphsjo000fu56cfh06pfvm.jsonl  boardgame_cmodqy3jo000uu56clx6n0se7.jsonl  boardgame_cmodxw3yb0018u54oto05sy4k.jsonl  boardgame_lobby copy.jsonl  boardgame_lobby.jsonl  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.new.yml  docker-compose.production.yml  docker-compose.yml  docker-deployment-guide.md  docker-entrypoint.sh  eslint.config.mjs  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
.qwen/: settings.json
.zscripts/: dev-online.bat  dev-online.sh
ai/: .env.example  .gitignore  README.md  TEST_CASES.md  ai_agent.py  debug_cli.py  pyproject.toml  requirements.txt  run_multi_ai.py  test_integration.py  test_llm.py
ai/src/darkforest_ai/: __init__.py  agent.py  base_ai.py  config.py  llm.py  prompt.py  protocol.py  state.py  validator.py
ai/src/darkforest_ai/cli/: __init__.py  account_manager.py  debug.py  multi_ai.py
ai/tests/: conftest.py  test_agent_mock.py  test_base_ai.py  test_integration.py  test_validator_state.py  test_websocket_connection.py
backend/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  sqlc.yaml
db/: custom.db
docs/: ARCHITECTURE.md  DEPLOYMENT.md  RUNBOOK.md  websocket-improvements.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mcpserver/: .env.example  go.mod  go.sum
prisma/: schema.prisma
replays/: index.json
scripts/: migrate-db.sh  (+2 more)
(+408 files in other folders)
